--- a/index.Rmd
+++ b/index.Rmd
@@ -131,7 +131,7 @@ dim(testFinal)  ##Observations and variables of final test dataset
 
 ### 3. Slice data from training data for cross validation checking
 
-The training data is divided into two parts. This first is the training set with 70% of the original training data and it will be used to train the model. The second is a validation set used to assess model performance.
+The training data is divided into two parts. This first is the training set with 70% of the original training data and it will be used to train the model. The second is a validation set used to validate model performance.
 
 ```{r SliceData}
 set.seed(12345) # For reproducibile purpose
@@ -145,3 +145,19 @@ validateData <- trainFinal[-inTrain,]
 ##dim(validateData) ##Observations and variables of final partitioned validation dataset
 ```
 The partitioned train data contains `r nrow(trainData)` observations and `r ncol(trainData)` variables. Whereas the validation data contains `r nrow(validateData)` observations and `r ncol(validateData)` variables.
+
+### 4. Building Model
+We will be building three different models namely Random Forrest, Gradient Boosted Model and Linear Discriminant Analysis.
+
+```{r ModelFit}
+##Random Forest Model Fit
+modRf <- train(classe ~., method="rf", data=trainData, trControl=trainControl(method="cv"),number=3)
+modRf
+
+##Gradient Boosted Model Fit
+ModGbm <- train(classe~., method="gbm", data=trainData, verbose=FALSE)
+
+##Linear Discriminant Analysis Model Fit
+modLda <- train(classe~., method="lda", data=trainData)
+
+```
